Archetype Engine V2 Updates
- Archetype Engine v2 AST as interfaces implemented by classes (read-only) and builders (read-write).
- XMLParser as an iterator (tokenizer style)
- Add ScriptCompiler
- Add ScriptWriter
- Move TerminalInputResolver & BatchInputResolver inside InputResolver
- Remove TemplateSupport SPI
- Combine Walker & Controller into ScriptInvoker
- Remove type parameter from Node.Visitor
- Remove VisitResult, replace with just a boolean
- Implement VisitResult.SKIP_SIBLINGS directly in InputResolver
- Remove Node.wrap
- Use Node.parent() for traversal
- Implement ScriptInvoker as a visitor.
- Remove hard-coded artifactId lookup in ArchtypeEngineV2
- rename .mustache to .hbs
- Expression.sub
- variables cannot be nested under inputs
- variable stubs
- normalizer as a stack based impl (again)
- Remove unsused test resources in helidon-archetype-maven-plugin.
- Update filtering logic for permutations, (only permutation filters as a predicate)
- Update helidon-archetype-maven-plugin to support XML based permutation filters
- Update Expression to support permutation filters:
  - casting operators (list) (string) (int)
  - sizeof operator
  - int literals